# catchy

./: .gitignore  CMakeLists.txt  README.md  action.yml  catchy.yml
.github/actions/complexity-check/: action.yaml
.github/workflows/: catchy.yml
catchy/: CMakeLists.txt  main.cpp
catchy/analysis/: analyzer.cpp  analyzer.hpp
catchy/complexity/: cognitive_complexity.cpp  cognitive_complexity.hpp
catchy/parser/: parser_base.cpp  parser_base.hpp  parser_factory.cpp  parser_factory.hpp
catchy/parser/languages/: cpp_parser.cpp  cpp_parser.hpp  python_parser.cpp  python_parser.hpp
catchy/utils/: filesystem.cpp  filesystem.hpp  git.cpp  git.hpp  safe_conversions.hpp
examples/: bubble_sort.py  nested.py  vowel_count.cpp
tree_sitter/: CMakeLists.txt
